--- a/src/App.css
+++ b/src/App.css
@@ -90,14 +90,18 @@ nav .voice-setting-div {
 }
 
 .page .dogs-list {
-  /* border: 2px red solid; */
-  border: none;
-  display: flex;
+  display: inline;
   color: white;
+  width: 100%;
+  /* background-color: #0183e6; */
 }
 
-.dogs-list .first-column {
+.page .dogs-list .first-column {
+  border: 1px red solid;
   width: 50%;
+  background-color: #0183e6;
+  position: relative;
+  float: left;
 }
 
 .dogs-list img {
@@ -117,15 +121,15 @@ nav .voice-setting-div {
   width: 50%;
 }
 
-.dogs-list div:nth-child(odd) {
-  background-color: #0068b8;
-  border: 1px #0068b8 solid;
+/* .dogs-list div:nth-child(odd) {
+  background-color: #0183e6;
+  border: 1px #0073ca solid;
 }
 
 .dogs-list div:nth-child(even) {
-  background-color: #0073ca;
-  border: 1px #0073ca solid;
-}
+  background-color: #0068b8;
+  border: 1px #0068b8 solid;
+} */
 
 
 @media screen and (max-width: 480px) {
@@ -227,9 +231,6 @@ nav .voice-setting-div {
 
   .page .dogs-list .first-column {
     width: 50%;
-    /* border: 2px yellow solid; */
-    /* display: flex;
-    flex-direction: column; */
     position: relative;
     float: left;
   }
