--- a/src/App.css
+++ b/src/App.css
@@ -93,15 +93,17 @@ nav .voice-setting-div {
   display: inline;
   color: white;
   width: 100%;
-  /* background-color: #0183e6; */
 }
 
 .page .dogs-list .first-column {
-  /* border: 1px red solid; */
   width: 50%;
   background-color: #0183e6;
   position: relative;
   float: left;
+}
+
+.page .dogs-list .first-column h3 {
+  color: white;
 }
 
 .dogs-list img {
@@ -117,19 +119,38 @@ nav .voice-setting-div {
   font-size: 40px;
 }
 
-.dogs-list .second-column {
-  width: 50%;
-}
-
-/* .dogs-list div:nth-child(odd) {
+.details-div {
+  font-size: 25px;
+  padding-bottom: 50px;
   background-color: #0183e6;
-  border: 1px #0073ca solid;
+  color: white;
 }
 
-.dogs-list div:nth-child(even) {
+.details-div img {
+  background-color: #0183e6;
+  height: 600px;
+  width: 100%;
+}
+
+.details-div h3 {
+ padding-bottom: 10px;
   background-color: #0068b8;
-  border: 1px #0068b8 solid;
-} */
+  padding-left: 20px;
+}
+
+.details-div h4 {
+  padding-bottom: 10px;
+  background-color: #0068b8;
+  padding-left: 20px;
+}
+
+.details-div ul {
+  list-style: none;
+}
+
+
+
+
 
 
 @media screen and (max-width: 480px) {
@@ -235,6 +256,10 @@ nav .voice-setting-div {
     float: left;
   }
 
+  .page .dogs-list .first-column h3 {
+    color: white;
+  }
+
   .dogs-list img {
     height: 250px;
     width: 100%;
@@ -249,18 +274,35 @@ nav .voice-setting-div {
   }
 
 .details-div {
-  border: 2px red solid;
+  font-size: 25px;
+  padding-bottom: 50px;
+  background-color: #0183e6;
+  color: white;
 }
 
 .details-div img {
-  border: 2px green solid;
+  background-color: #0183e6;
   height: 250px;
   width: 100%;
 }
 
-/* .page .dogs-list .first-column:nth-child(odd) {
-  background-color: aqua;
-} */
+.details-div h3 {
+ padding-bottom: 10px;
+  background-color: #0068b8;
+  padding-left: 20px;
+}
+
+.details-div h4 {
+  padding-bottom: 10px;
+  background-color: #0068b8;
+  padding-left: 20px;
+}
+
+.details-div ul {
+  list-style: none;
+}
+
+
 
 
 
