--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,14 @@ nav .voice-setting-div {
     color: white;
   }
 
+  .page .dogs-list .first-column img {
+    background-image: url(./images/arrow.png);
+    background-repeat: no-repeat;
+    background-size: 25px 25px;
+    background-position-x: right;
+    margin-top: 13px;
+  }
+
   .dogs-list img {
     height: 250px;
     width: 100%;
